<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">SoundRemote</string>
    <string name="empty_string" translatable="false" />
    <string name="empty_string_attribution_label" translatable="false">Default access</string>

    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="navigate_up">Navigate up</string>
    <string name="app_info">App info</string>

    <!--Permission-->
    <string name="permission_caption">Permission</string>
    <string name="permission_granted_caption">granted</string>
    <string name="permission_required_caption">required</string>
    <string name="permission_denied_caption">denied</string>
    <string name="permission_show_info_caption">Permission info</string>
    <string name="permission_tooltip_title">Permission required</string>
    <string name="permission_tooltip_text_template">
        This event needs %1$s permission to function.
        It can be granted in the App info screen.
        App restart might be necessary.
    </string>
    <string name="permission_name_phone">Phone</string>

    <!--Messages-->
    <string name="message_invalid_address">Invalid address</string>
    <string name="message_connect_failed">Failed to connect</string>
    <string name="message_already_bound">Bind error: already bound</string>
    <string name="message_bind_error">Bind error</string>
    <string name="message_disconnected">Disconnected</string>
    <string name="message_audio_focus_request_failed">Failed to gain audio focus</string>

    <!--Home screen-->
    <string name="connect_caption">Connect</string>
    <string name="disconnect_caption">Disconnect</string>
    <string name="server_address">Server address</string>
    <string name="navigation_menu" tools:override="true">Navigation menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_edit_hotkeys">Edit hotkeys</string>
    <string name="action_events">Events</string>
    <string name="action_recent_servers">Show recent servers</string>
    <string name="recent_servers_title">Recent servers</string>
    <string name="action_mute_app">Mute application</string>
    <string name="action_unmute_app">Unmute application</string>

    <!--Notification-->
    <string name="notification_disconnected_text">Disconnected 🔴</string>
    <string name="notification_muted_text">Muted 🔇</string>

    <!--Hotkeys-->
    <string name="hotkey_list_title">Hotkeys</string>
    <string name="hotkey_delete_confirmation">Delete hotkey?</string>
    <string name="action_hotkey_create">Create</string>
    <string name="drag_handle_description">Drag handle</string>
    <string name="hotkey_actions_menu_description">Actions menu</string>

    <!--Hotkey edit-->
    <string name="hotkey_create_title">Create hotkey</string>
    <string name="hotkey_edit_title">Edit hotkey</string>
    <string name="error_invalid_key">Enter latin letter or digit</string>
    <string name="win_checkbox_label" translatable="false">Win</string>
    <string name="ctrl_checkbox_label" translatable="false">Ctrl</string>
    <string name="shift_checkbox_label" translatable="false">Shift</string>
    <string name="alt_checkbox_label" translatable="false">Alt</string>
    <string name="hotkey_name_edit_label">Name</string>
    <string name="hotkey_name_edit_placeholder">Leave blank to autofill</string>
    <string name="hotkey_key_edit_label">Key(required)</string>
    <string name="hotkey_key_edit_hint">a–z or 0–9</string>

    <!--Hotkey select-->
    <string name="hotkey_select_title">Select hotkey</string>
    <string name="hotkey_select_none">No hotkey</string>

    <!--Action select-->
    <string name="action_select_title">Select action</string>

    <!--Events-->
    <string name="event_list_title">Events</string>
    <string name="event_name_call_start">Phone call start</string>
    <string name="event_name_call_end">Phone call end</string>
    <string name="event_name_shake">Shake</string>

    <!--Settings-->
    <string name="settings_title">Settings</string>
    <string name="settings_advanced_title">Advanced</string>
    <string name="pref_server_port_title">Server port</string>
    <string name="pref_client_port_title">Client port</string>
    <string name="pref_compression_title">Audio compression</string>
    <string name="pref_server_port_summary">Must match the server port used by the server.</string>
    <string name="pref_client_port_summary">Must match the client port used by the server.</string>
    <string name="pref_default_value_template">Default value: %1s.</string>
    <string name="pref_summary_template" translatable="false">%1$s: %2$s %3$s</string>
    <string name="pref_summary_template_short" translatable="false">%1$s: %2$s</string>
    <string name="pref_valid_int_range_template" translatable="false">%1$d - %2$d</string>
    <string name="pref_ignore_focus_title">Ignore audio focus</string>
    <string name="pref_ignore_focus_summary">Allow playing audio simultaneously with other apps</string>

    <!--About-->
    <string name="about_title_template">About %s</string>
    <string name="show_license">license</string>
    <string name="open_homepage">homepage</string>

    <!--Compression-->
    <string name="compression_none">No compression</string>
    <string name="compression_64">64 kbps</string>
    <string name="compression_128">128 kbps</string>
    <string name="compression_192">192 kbps</string>
    <string name="compression_256">256 kbps</string>
    <string name="compression_320">320 kbps</string>

    <!--Action types-->
    <string name="action_none">No action</string>
    <string name="action_type_app">Application</string>
    <string name="action_type_hotkey">Hotkey</string>

    <!--App actions-->
    <string name="app_action_mute">Mute</string>
    <string name="app_action_unmute">Unmute</string>
    <string name="app_action_connect">Connect</string>
    <string name="app_action_disconnect">Disconnect</string>
</resources>
