...
    )
    NavHost(
        navController = navController,
        startDestination = HomeRoute,
        modifier = modifier
    ) {
        homeScreen(
            onNavigateToHotkeyList = navController::navigateToHotkeyList,
            onNavigateToEvents = navController::navigateToEvents,
            onNavigateToSettings = navController::navigateToSettings,
            onNavigateToAbout = navController::navigateToAbout,
            onNavigateToEditHotkey = { hotkeyId ->
                navController.navigateToHotkeyEdit(hotkeyId)
...
